--- a/CSS/home.css
+++ b/CSS/home.css
@@ -206,6 +206,118 @@ textarea:not([rows]) {
     .nav_bar li.btn:hover a.btn{
         color: var(--white);
     }
+    .burger{
+        display: none;
+    }
+    @media screen and (max-width: 1279px){
+        .nav_list{
+            display: none;
+        }
+        .burger{
+            display: block;
+            width: 5%;
+            height: 100%;
+            margin-right: 20px;
+        }
+        div.hamburger-menu{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        
+            width: 10%;
+            height: 100%;
+        }
+        div.hamburger-menu input#menu__toggle {
+            opacity: 0;
+        }
+        div.hamburger-menu input#menu__toggle:checked + .menu__btn > span {
+            transform: rotate(45deg);
+        }
+        div.hamburger-menu input#menu__toggle:checked + .menu__btn > span::before {
+            top: 0;
+        
+            transform: rotate(0deg);
+        }
+        div.hamburger-menu input#menu__toggle:checked + .menu__btn > span::after {
+            top: 0;
+        
+            transform: rotate(90deg);
+        }
+        div.hamburger-menu input#menu__toggle:checked ~ ul.menu__box {
+            right: 0 !important;
+            display: flex;
+        }
+        div.hamburger-menu label.menu__btn {
+            position: absolute;
+            z-index: 1;
+        
+            width: 40px;
+            height: 26px;
+        
+            cursor: pointer;
+        }
+        div.hamburger-menu label.menu__btn > span,
+        div.hamburger-menu label.menu__btn > span::before,
+        div.hamburger-menu label.menu__btn > span::after {
+            display: block;
+        
+            position: absolute;
+        
+            width: 100%;
+            height: 5px;
+        
+            background-color: white;
+        
+            transition-duration: .25s;
+        }
+        div.hamburger-menu label.menu__btn > span::before {
+            content: '';
+            top: -16px;
+        }
+        div.hamburger-menu label.menu__btn > span::after {
+            content: '';
+            top: 16px;
+        }
+        div.hamburger-menu ul.menu__box {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+
+            display: none;
+        
+            position: absolute;
+            top: 0;
+            right: -100%;
+        
+            width: 300px;
+            height: 100vh;
+        
+            margin: 0;
+                    
+            list-style: none;
+        
+            background-color: var(--blue);
+        
+            transition-duration: .25s;
+        }
+        div.hamburger-menu ul.menu__box li{     
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        div.hamburger-menu ul.menu__box li:first-child{
+            margin-top: 15%;
+        }
+        div.hamburger-menu ul.menu__box li a{
+            font-family: Verdana, Geneva, sans-serif;
+            font-size: 2rem;
+        }
+        .nav_bar aside{
+            width: 30%;
+            margin-left: 20px;
+        }
+    }
 }   
 @layer Landing_Page{
     #landing_page{
