--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,495 +1,1 @@
-@layer CSS_Reset{ 
-/* Box sizing rules */
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
-/* Prevent font size inflation */
-html {
-    -moz-text-size-adjust: none;
-    -webkit-text-size-adjust: none;
-    text-size-adjust: none;
-    display: block;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
-body{
-    display: block;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
-/* Remove default margin in favour of better control in authored CSS */
-body, h1, h2, h3, h4, p,
-figure, blockquote, dl, dd {
-    margin-block-end: 0;
-}
-
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
-    list-style: none;
-}
-
-/* Set core body defaults */
-body {
-    min-height: 100vh;
-    line-height: 1.5;
-}
-
-/* Set shorter line heights on headings and interactive elements */
-h1, h2, h3, h4,
-button, input, label {
-    line-height: 1.1;
-}
-
-/* Balance text wrapping on headings */
-h1, h2,
-h3, h4 {
-    text-wrap: balance;
-}
-
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-    text-decoration-skip-ink: auto;
-    color: currentColor;
-}
-
-/* Make images easier to work with */
-img,
-picture {
-    max-width: 100%;
-    display: block;
-}
-
-/* Inherit fonts for inputs and buttons */
-input, button,
-textarea, select {
-    font-family: inherit;
-    font-size: inherit;
-}
-
-/* Make sure textareas without a rows attribute are not tiny */
-textarea:not([rows]) {
-    min-height: 10em;
-}
-
-/* Anything that has been anchored to should have extra scroll margin */
-:target {
-    scroll-margin-block: 5ex;
-}
-
-
-}
-@layer Variables{
-    :root{
-        --blue: #165684;
-        --white: #F5F5F5;
-        --black: #252525;
-    }
-    *{
-        box-sizing: border-box;
-        scroll-behavior: smooth;
-    }
-}
-@layer Navigation{
-    header{
-        width: 100%;
-        height: 10vh;
-
-        display: block;
-
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 4;
-
-        background-color: var(--blue);
-    }
-    .nav_bar{
-        width: 100%;
-        height: 100%;
-
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .nav_list{
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-
-        width: 40%;
-        height: 100%;
-        margin-right: 5%;
-
-        list-style-type: none;
-    }
-    .nav_bar aside{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        width: 20%;
-        height: 100%;
-    }
-    .nav_bar h1{
-        font-family: Verdana, Geneva, sans-serif;
-
-        color: white;
-
-        padding: 0;
-        margin: 0;
-    }
-    .nav_bar a{
-        font-family: Verdana, Geneva, sans-serif;
-
-        text-decoration: none;
-
-        color: white;
-
-        position: relative;
-
-        padding-bottom: 2px;
-    }
-    .nav_bar ul a::after {  
-        background: none repeat scroll 0 0 transparent;
-        bottom: 0;
-        content: "";
-        display: block;
-        height: 2px;
-        right: 0;
-        position: absolute;
-        background: #fff;
-        transition: width 0.3s ease 0s, left 0.3s ease 0s;
-        width: 0;
-    }
-    .nav_bar ul a:hover:after{
-        width: 100%; 
-    }
-}   
-@layer Landing_Page{
-    #landing_page{
-        width: 100%;
-        height: 100vh;
-
-        margin: 0;
-        padding: 0;
-
-        display: flex;
-        justify-content: center;
-
-        background-image: url(../images/sportovy_klub_brusel/image_123650291.JPG);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-    }
-    #landing_page article{
-        width: 50%;
-        height: 100%;
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-        text-align: center;
-
-        z-index: 3;
-    }
-    #landing_page aside{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-        text-align: center;
-
-        z-index: 3;
-    }
-    #landing_page h1{
-        font-size: 4rem;
-        font-family: Verdana, Geneva, sans-serif;
-
-        margin-top: 0;
-        padding: 0;
-        margin-bottom: 3%;
-
-        color: var(--white);
-    }
-    #landing_page strong{
-        font-size: 1.3rem;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-
-        color: var(--white);
-    }
-    #landing_page .dark{
-        position: absolute;
-        top: 0;
-        left: 0;
-        
-        width: 100%;
-        height: 100%;
-
-        background-color: rgba(0, 0, 0, 0.675);
-
-        z-index: 2;
-    }
-    #landing_page a{
-        box-sizing: border-box;
-        padding: 1% 3%;
-        border: 2px solid var(--blue);
-        border-radius: 15px;
-
-        background-color: var(--blue);
-
-        font-size: 1.2rem;
-        font-weight: 520;
-        font-family: Verdana, sans-serif;
-
-        text-decoration: none;
-
-        color: var(--white) ;
-
-        transition: all .3s;
-    }
-    #landing_page a:hover{
-        background-color: transparent;
-    }
-}
-@layer About_Us{
-    #about_us{
-        width: 100%;
-        height: 100vh;
-
-        display: flex;
-        justify-content: center;
-    }
-    #about_us article{
-        width: 80%;
-        height: 100%;
-
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    #about_us figure{
-        width: 40%;
-        height: 400px;
-
-        overflow: hidden;
-
-        background-image: url(../images/newri_irsko/image_123650291.JPG);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-
-        border-radius: 20px;
-        box-shadow: var(--black) 10px 10px 50px;
-    }
-    #about_us aside{
-        width: 45%;
-    }
-    #about_us h2{
-        font-family: Verdana, Geneva, sans-serif;
-        font-size: 2rem;
-    }
-    #about_us p{
-        font-family: Verdana, Geneva, sans-serif;
-        font-size: 1rem;
-        
-        text-align: justify;
-    }
-}
-@layer Services{
-    #services{
-        width: 100%;
-
-        display: flex;
-        justify-content: center;
-    }
-    #services article{
-        width: 80%;
-        height: 100%;
-
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        flex-wrap: wrap;
-    }
-    #services h2{
-        width: 100%;
-
-        margin: 0;
-        padding: 0;
-
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 2rem;
-
-        margin-bottom: 2.5%;
-    }
-    #services aside{
-        width: 30%;
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        background-color: #165684;
-
-        border-radius: 20px;
-        padding: 2.5% 2.5% 0 2.5%;
-        margin-bottom: 2%;
-    }
-    #services figure{
-        width: 100%;
-
-        margin: 0;
-    }
-    #services img{
-        border-radius: 15px;
-
-        width: 100%;
-    }
-    #services h3{
-        font-family: Verdana, Geneva, sans-serif;
-        font-size: 1rem;
-
-        color: white;
-    }
-}
-@layer Work{
-    #work{
-        width: 100%;
-
-        display: flex;
-        justify-content: center;
-    }
-    #work article{
-        width: 80%;
-        height: 100%;
-
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        flex-wrap: wrap;
-    }
-    #work h2{
-        width: 100%;
-
-        margin: 0;
-        padding: 0;
-
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 2rem;
-
-        margin-bottom: 2.5%;
-    }
-    #work aside{
-        width: 30%;
-    }
-    #work figure{
-        width: 100%;
-        height: 100%;
-
-        margin: 0;
-    }
-    #work .content{
-        width: 100%;
-        position: relative;
-        
-        display: flex;
-        justify-content: center;
-    }
-    #work .content img{
-        width: 100%;
-
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
-    .carousel {
-        overflow: hidden;
-        width: 100%;
-        max-width: 500px;
-        position: relative;
-    }
-    
-    .carousel-content {
-        display: flex;
-        transition: transform 0.5s ease-in-out;
-    }
-    
-    .carousel-content img {
-        min-width: 100%;
-        max-width: 100%;
-        flex-shrink: 0;
-    }
-    
-    button.prev, button.next {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: rgba(0,0,0,0.5);
-        color: white;
-        border: none;
-        cursor: pointer;
-        padding: 10px;
-    }
-    
-    button.prev {
-        left: 10px;
-    }
-    
-    button.next {
-        right: 10px;
-    }
-    aside{
-        position: relative;
-
-        margin-bottom: 5%;
-    }
-    #work figcaption{
-        text-align: center;
-        font-family: Verdana, Geneva, sans-serif;
-        color: rgb(75, 75, 75);
-        margin-top: 1%;
-    }
-}
-@layer Footer{
-    footer{
-        width: 100%;
-
-        display: flex;
-        justify-content: center;
-
-        background-color: #1d272f;
-    }
-    footer section{
-        width: 28%;
-        height: 100%;
-        
-        padding: 1%;
-        
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    footer p{
-        padding: 0;
-        margin: 0;
-
-        color: var(--white);
-
-        font-family: Verdana, Geneva, sans-serif;
-    }
-    footer a{
-        text-decoration: none;
-    }
-    footer a:hover{
-        text-decoration: underline;
-    }
-}
+@import url(https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap);@import url(https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap);@layer CSS_Reset{*,::after,::before{box-sizing:border-box}body,html{display:block;width:100%;margin:0;padding:0}html{-moz-text-size-adjust:none;-webkit-text-size-adjust:none;text-size-adjust:none}body{min-height:100vh;line-height:1.5}blockquote,body,dd,dl,figure,h1,h2,h3,h4,p{margin-block-end:0}ol[role=list],ul[role=list]{list-style:none}button,h1,h2,h3,h4,input,label{line-height:1.1}h1,h2,h3,h4{text-wrap:balance}a:not([class]){text-decoration-skip-ink:auto;color:currentColor}img,picture{max-width:100%;display:block}button,input,select,textarea{font-family:inherit;font-size:inherit}textarea:not([rows]){min-height:10em}:target{scroll-margin-block:5ex}}@layer Variables{:root{--blue:#165684;--white:#F5F5F5;--black:#252525;--nadpis:"Oswald";--podnadpis:"Roboto"}*{box-sizing:border-box;scroll-behavior:smooth}}@layer Navigation{header{height:10vh;display:block;position:fixed;top:0;left:0;z-index:4;background-color:var(--blue)}.nav_bar,.nav_list{width:100%;height:100%;display:flex;justify-content:space-between;align-items:center}.nav_list{justify-content:space-around;width:40%;margin-right:5%;list-style-type:none}.nav_bar aside,li.btn{display:flex;justify-content:center;align-items:center}.nav_bar aside{width:20%;height:100%}.nav_bar h1{font-family:var(--nadpis);font-size:1.4rem;color:#fff;padding:0;margin:0}.nav_bar a{font-family:var(--podnadpis);font-size:1.1rem;text-decoration:none;color:#fff;position:relative;padding-bottom:2px}.nav_bar ul a::after{background:0 0;bottom:0;content:"";display:block;height:2px;right:0;position:absolute;background:#fff;transition:width .3s ease 0s,left .3s ease 0s;width:0}.nav_bar ul a:hover:after,header{width:100%}li.btn{background-color:var(--white);box-sizing:border-box;padding:1% 2%;border-radius:15px;border:var(--white) 2px solid;transition:all .3s}li.btn:hover{background-color:transparent}.nav_bar a.btn{font-weight:700;color:var(--blue)}.burger,.nav_bar a.btn::after{display:none}.nav_bar li.btn:hover a.btn{color:var(--white)}@media screen and (max-width:1279px){.nav_list{display:none}.burger{display:block;width:5%;height:100%;margin-right:20px}div.hamburger-menu{display:flex;justify-content:center;align-items:center;width:10%;height:100%}div.hamburger-menu input#menu__toggle{opacity:0}div.hamburger-menu input#menu__toggle:checked+.menu__btn>span{transform:rotate(45deg)}div.hamburger-menu input#menu__toggle:checked+.menu__btn>span::before{top:0;transform:rotate(0deg)}div.hamburger-menu input#menu__toggle:checked+.menu__btn>span::after{top:0;transform:rotate(90deg)}div.hamburger-menu input#menu__toggle:checked~ul.menu__box{right:0!important;display:flex}div.hamburger-menu label.menu__btn{position:absolute;z-index:1;width:40px;height:26px;cursor:pointer}div.hamburger-menu label.menu__btn>span,div.hamburger-menu label.menu__btn>span::after,div.hamburger-menu label.menu__btn>span::before{display:block;position:absolute;width:100%;height:5px;background-color:#fff;transition-duration:.25s}div.hamburger-menu label.menu__btn>span::before{content:"";top:-16px}div.hamburger-menu label.menu__btn>span::after{content:"";top:16px}div.hamburger-menu ul.menu__box{display:flex;flex-direction:column;justify-content:space-evenly;align-items:center;display:none;position:absolute;top:0;right:-100%;width:300px;height:100vh;margin:0;list-style:none;background-color:var(--blue);transition-duration:.25s}div.hamburger-menu ul.menu__box li{display:flex;justify-content:center;align-items:center}div.hamburger-menu ul.menu__box li:first-child{margin-top:15%}div.hamburger-menu ul.menu__box li a{font-family:Verdana,Geneva,sans-serif;font-size:2rem}.nav_bar aside{width:30%;margin-left:20px}}}@layer Landing_Page{#landing_page{width:100%;height:100vh;margin:0;padding:0;position:relative;display:flex;justify-content:center;overflow:hidden}#landing_page article{width:100%;height:100%;background-color:rgba(0,0,0,.516)}#landing_page article,#landing_page aside{display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center;z-index:3}#landing_page h1{font-size:4rem;font-family:var(--nadpis);margin-top:0;padding:0;margin-bottom:3%;color:var(--white)}#landing_page a,#landing_page strong{font-size:1.6rem;font-family:var(--podnadpis);color:var(--white)}#landing_page video{height:150%;position:absolute;top:-25%;left:-25%;z-index:-1}#landing_page a{box-sizing:border-box;padding:1% 3%;border:2px solid var(--blue);border-radius:15px;background-color:var(--blue);font-size:1.2rem;font-weight:520;text-decoration:none;transition:all .3s}#landing_page a:hover{background-color:transparent}@media screen and (max-width:827px){#landing_page video{top:-25%;left:-75%}}@media screen and (max-width:455px){#landing_page video{left:-100%}#landing_page h1{font-size:2rem}#landing_page strong{font-size:1rem}}}@layer About_Us{#about_us{width:100%;height:100vh;display:flex;justify-content:center;z-index:1}#about_us article{width:80%;height:100%;display:flex;justify-content:space-between;align-items:center}#about_us figure{width:40%;height:400px;overflow:hidden;background-image:url(../images/newri_irsko/image_123650291.JPG);background-repeat:no-repeat;background-size:cover;background-position:center;border-radius:20px;box-shadow:var(--black) 10px 10px 50px}#about_us aside{width:45%}#about_us h2{font-family:var(--nadpis);font-size:2rem}#about_us p{font-family:Verdana,Geneva,sans-serif;font-size:1rem;text-align:justify}@media screen and (max-width:1000px){#about_us h2{text-align:center}#about_us article{flex-direction:column;justify-content:center}#about_us article aside{width:100%;margin-bottom:10%}#about_us article figure{display:none}}}@layer Services{#services{width:100%;display:flex;justify-content:center}#services article{width:80%;height:100%;display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;margin-bottom:5%;margin-top:5%}#services h2{width:100%;padding:0;font-family:var(--nadpis);font-size:2rem;margin:0 0 2.5%}#services aside{width:45%;display:flex;align-items:center;background-color:var(--white);padding:2% 3%;margin:2%;border-left:var(--blue) solid 10px;transition:all .3s ease-in}#services aside:hover{background-color:var(--blue);color:var(--white)}#services aside:last-child{width:96%}#services h3{font-family:var(--podnadpis);font-size:1.4rem;text-align-last:left;margin:0;padding:0}@media screen and (max-width:1000px){#services h2{text-align:center}}@media screen and (max-width:876px){#services aside{width:100%}}}@layer Work{#work,#work h2{width:100%}#work article{width:80%;height:100%;display:flex;justify-content:space-around;align-items:center;flex-wrap:wrap;margin-top:5%}#work h2{padding:0;font-family:var(--nadpis);font-size:2rem;margin:0 0 2.5%}#work aside{width:30%;min-width:350px;position:relative;margin:1% 1% 5%}#work figure{width:100%;height:100%;margin:0}#work .content,.carousel{width:100%;position:relative}#work,#work .content{display:flex;justify-content:center}#work .content img{width:100%;position:absolute;top:0;left:0}.carousel{overflow:hidden;max-width:500px}.carousel-content{display:flex;transition:transform .5s ease-in-out}.carousel-content img{min-width:100%;max-width:100%;flex-shrink:0}button.next,button.prev{position:absolute;top:50%;transform:translateY(-50%);background-color:rgba(0,0,0,.5);color:#fff;border:0;cursor:pointer;padding:10px}button.prev{left:10px}button.next{right:10px}#work figcaption{text-align:center;font-family:Verdana,Geneva,sans-serif;color:#4b4b4b;margin-top:1%}@media screen and (max-width:1000px){#work h2{text-align:center}}@media screen and (max-width:475px){#work h2{text-align:center}#work aside{min-width:260px}}}@layer Footer{footer,footer section#contact_info{display:flex;justify-content:center;align-items:center;width:100%}footer{flex-direction:column}footer section#contact_info{padding:3%;background-color:var(--blue)}footer section#contact_info aside:first-child{width:35%;display:flex;flex-direction:column}footer section#contact_info h3{font-family:var(--nadpis);font-size:2rem;margin-bottom:3%;margin-top:0;color:#fff}footer section#contact_info strong{font-family:var(--podnadpis);font-size:1.4rem}footer section#contact_info p{color:var(--white)}footer section#contact_info a{color:#fff;font-family:Verdana,Geneva,Tahoma,sans-serif}footer section#copy{width:100%;height:100%;padding:1%;display:flex;justify-content:center;align-items:center;background-color:#1d272f}footer section#copy p{padding:0;margin:0 2.5%;color:var(--white);font-family:Verdana,Geneva,sans-serif}footer iframe{width:450px;height:300px}footer a{text-decoration:none}footer a:hover{text-decoration:underline}@media screen and (max-width:740px){footer section#contact_info{flex-direction:column}footer section#contact_info aside:first-child{display:flex;flex-direction:row;justify-content:space-evenly;align-items:center;flex-wrap:wrap;width:100%;margin-bottom:10%}footer section#contact_info aside:first-child p{margin:0;padding:0;width:40%;text-align:center}footer section#contact_info aside:first-child h3{width:100%;text-align:center}footer iframe{width:90%}}@media screen and (max-width:465px){footer section#contact_info aside:first-child p{width:100%}footer section#copy{display:flex;flex-direction:column}}}
