--- a/CSS/home.css
+++ b/CSS/home.css
@@ -12,7 +12,8 @@
 html {
     -moz-text-size-adjust: none;
     -webkit-text-size-adjust: none;
-    text-size-adjust: none;
+    -ms-text-size-adjust: none;
+        text-size-adjust: none;
     display: block;
     width: 100%;
     margin: 0;
@@ -27,7 +28,8 @@ body{
 /* Remove default margin in favour of better control in authored CSS */
 body, h1, h2, h3, h4, p,
 figure, blockquote, dl, dd {
-    margin-block-end: 0;
+    -webkit-margin-after: 0;
+            margin-block-end: 0;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
@@ -56,7 +58,8 @@ h3, h4 {
 
 /* A elements that don't have a class get default styles */
 a:not([class]) {
-    text-decoration-skip-ink: auto;
+    -webkit-text-decoration-skip: ink;
+            text-decoration-skip-ink: auto;
     color: currentColor;
 }
 
@@ -433,10 +436,11 @@ textarea:not([rows]) {
 @layer About_Us{
     #about_us{
         width: 100%;
-        height: 100vh;
 
         display: flex;
         justify-content: center;
+
+        margin: 5% 0;
 
         z-index: 1;
     }
@@ -450,7 +454,7 @@ textarea:not([rows]) {
     }
     #about_us video{
         width: 45%;
-        height: 400px;
+        height: 300px;
 
         border-radius: 20px;
         box-shadow: var(--black) 10px 10px 50px;
@@ -544,7 +548,9 @@ textarea:not([rows]) {
         font-family: var(--podnadpis);
         font-size: 1.4rem;
 
-        text-align-last: left;
+        -moz-text-align-last: left;
+
+             text-align-last: left;
 
         margin: 0;
         padding: 0;
