--- a/CSS/home.css
+++ b/CSS/home.css
@@ -707,13 +707,12 @@ textarea:not([rows]) {
         display: flex;
         flex-direction: column;
     }
-    footer section#contact_info aside:nth-child(2){
-        width: 25%;
-
+    footer section#contact_info aside:last-child{
         display: flex;
-        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
 
-        margin-right: 10%;
+        width: 70%;
     }
     footer section#contact_info h3{
         font-family: var(--nadpis);
@@ -727,6 +726,8 @@ textarea:not([rows]) {
     footer section#contact_info strong{
         font-family: var(--podnadpis);
         font-size: 1.4rem;
+
+        color: var(--white);
     }
     footer section#contact_info p{
         color: var(--white);
@@ -743,10 +744,13 @@ textarea:not([rows]) {
         padding: 1%;
         
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
         
         background-color: #1d272f;
+    }
+    footer section#copy aside a{
+        margin-left: 20px
     }
     footer section#copy p{
         padding: 0;
@@ -768,45 +772,55 @@ textarea:not([rows]) {
     footer a:hover{
         text-decoration: underline;
     }
-    @media screen and (max-width: 1092px){
+    @media screen and (max-width: 1220px){
         footer section#contact_info{
             flex-direction: column;
         }
-        footer section#contact_info aside:first-child,
-        footer section#contact_info aside:nth-child(2){
-            display: flex;
+        footer section#contact_info aside{
+            width: 100%;
+        }
+        footer section#contact_info aside.Kontakt{ 
+            flex-wrap: wrap;
+            width: 100%;
             flex-direction: row;
             justify-content: space-evenly;
-            align-items: center;
-            flex-wrap: wrap;
-
-            width: 100%;
-
-            margin-bottom: 10%;
-            margin-left: 0;
-            margin-right: 0;
+            padding: 5% 0;
         }
-        footer section#contact_info aside:first-child p,
-        footer section#contact_info aside:nth-child(2) p{
-            margin: 0;
-            padding: 0;
+        footer section#contact_info aside.Kontakt h3{
+            width: 100%;
+            text-align: center;
+        }
+        footer section#contact_info aside.map{
+            width: 100%;
+        }
+        footer section#contact_info aside.map aside:last-child{
             width: 40%;
-
-            text-align: center;
-        }
-        footer section#contact_info aside:first-child h3,
-        footer section#contact_info aside:nth-child(2) h3{
-            width: 100%;
-            text-align: center;
-        }
-        footer iframe{
-            width: 90%;
+            display: flex;
+            justify-content: end;
+            align-items: center;
         }
     }
-    @media screen and (max-width: 465px){
-        footer section#contact_info aside:first-child p{
-            width: 100%;
+    @media screen and (max-width: 853px){
+        footer section#contact_info aside.map{
+            flex-direction: column;
         }
+        footer section#contact_info aside.map aside{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            margin-bottom: 5%;
+        }
+        footer section#contact_info aside.map aside.mapa{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+        footer section#contact_info aside.map aside p, 
+        footer section#contact_info aside.map aside strong{
+            text-align: center;
+        }
+    }
+    @media screen and (max-width: 727px){
         footer section#copy{
             display: flex;
             flex-direction: column;
